Java port: RayGizmo correctly shows recursive ray tracing