@@ -1,6 +1,7 @@
 package vsdk.toolkit.gui.gizmo;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
@@ -13,8 +14,10 @@ import vsdk.toolkit.common.color.ColorRgb;
 import vsdk.toolkit.environment.geometry.element.Intersection;
 import vsdk.toolkit.environment.geometry.element.Ray;
 import vsdk.toolkit.environment.geometry.volume.Arrow;
+import vsdk.toolkit.environment.geometry.volume.Sphere;
 import vsdk.toolkit.environment.material.SimpleMaterial;
 import vsdk.toolkit.environment.scene.SimpleBody;
+import vsdk.toolkit.environment.scene.SimpleScene;
 
 /**
 Gizmo that represents a 3D ray (origin + direction) as a volumetric arrow.
@@ -48,16 +51,24 @@ public class RayGizmo extends Gizmo {
     private static final double ARROW_BASE_RADIUS = 0.15;
     private static final double ARROW_HEAD_RADIUS = 0.40;
 
-    public record RayBounce(Ray ray, Intersection intersection) {
-    }
+    public static final ColorRgb DEFAULT_RAY_COLOR    = new ColorRgb(1, 0.8, 0.8);
+    public static final ColorRgb DEFAULT_NORMAL_COLOR = new ColorRgb(1, 1, 0.8);
 
-    public record RaySnapshot(double rotationAngleInRadians, List<RayBounce> bounces) {
-        public RaySnapshot(double rotationAngleInRadians, List<RayBounce> bounces) {
+    public record RaySnapshot(double rotationAngleInRadians, List<Ray> rays, List<Intersection> intersections) {
+        public RaySnapshot(double rotationAngleInRadians, List<Ray> rays, List<Intersection> intersections) {
+            if ( rays.size() != intersections.size() ) {
+                throw new IllegalArgumentException(
+                    "rays and intersections must be the same size: " +
+                    rays.size() + " vs " + intersections.size());
+            }
             this.rotationAngleInRadians = rotationAngleInRadians;
-            this.bounces = List.copyOf(bounces);
+            this.rays = List.copyOf(rays);
+            this.intersections = Collections.unmodifiableList(new ArrayList<>(intersections));
         }
     }
 
+    private final Arrow arrow;
+    private final Sphere dotSphere;
     private final SimpleBody body;
     private final Function<Ray, Intersection> intersectionCallback;
     private final int maxNumOfReflections;
@@ -73,13 +84,19 @@ public class RayGizmo extends Gizmo {
     private boolean visible;
     private double disableAfterElapsedSeconds;
 
+    private ColorRgb sourceRayColor;
+    private List<ColorRgb> normalRayColors;
+    private List<ColorRgb> reflectedRayColors;
+    private List<ColorRgb> refractedRayColors;
+
     /**
      * @param intersectionCallback called per-bounce to query scene hits; may be null
      * @param maxNumOfReflections  number of reflection bounces to trace (0 = primary only)
      */
     public RayGizmo(Function<Ray, Intersection> intersectionCallback, int maxNumOfReflections) {
-        Arrow arrow = new Arrow(ARROW_BASE_LENGTH, ARROW_HEAD_LENGTH,
+        arrow = new Arrow(ARROW_BASE_LENGTH, ARROW_HEAD_LENGTH,
                 ARROW_BASE_RADIUS, ARROW_HEAD_RADIUS);
+        dotSphere = new Sphere(ARROW_BASE_RADIUS);
 
         body = new SimpleBody();
         body.setGeometry(arrow);
@@ -103,6 +120,11 @@ public class RayGizmo extends Gizmo {
         previousDataTime = new Date();
         visible = true;
         disableAfterElapsedSeconds = DEFAULT_DISABLE_TIME;
+
+        sourceRayColor = DEFAULT_RAY_COLOR;
+        normalRayColors = new ArrayList<>(List.of(DEFAULT_NORMAL_COLOR));
+        reflectedRayColors = new ArrayList<>(List.of(DEFAULT_RAY_COLOR));
+        refractedRayColors = new ArrayList<>(List.of(DEFAULT_RAY_COLOR));
     }
 
     public Vector3Dd getPosition() {
@@ -118,11 +140,13 @@ public class RayGizmo extends Gizmo {
             return;
         }
 
-        List<RayBounce> bounces = new ArrayList<>();
+        List<Ray> rays = new ArrayList<>();
+        List<Intersection> intersections = new ArrayList<>();
 
         Intersection primaryIntersection = (intersectionCallback != null) ?
             intersectionCallback.apply(ray) : null;
-        bounces.add(new RayBounce(ray, primaryIntersection));
+        rays.add(ray);
+        intersections.add(primaryIntersection);
 
         if ( intersectionCallback != null && primaryIntersection != null ) {
             Ray currentRay = ray;
@@ -133,7 +157,8 @@ public class RayGizmo extends Gizmo {
                     break;
                 }
                 Intersection reflectedIntersection = intersectionCallback.apply(reflectedRay);
-                bounces.add(new RayBounce(reflectedRay, reflectedIntersection));
+                rays.add(reflectedRay);
+                intersections.add(reflectedIntersection);
                 if ( reflectedIntersection == null ) {
                     break;
                 }
@@ -142,7 +167,7 @@ public class RayGizmo extends Gizmo {
             }
         }
 
-        pendingSnapshot.set(new RaySnapshot(rotationAngleInRadians, bounces));
+        pendingSnapshot.set(new RaySnapshot(rotationAngleInRadians, rays, intersections));
         visible = true;
         recordDataArrival();
     }
@@ -183,9 +208,9 @@ public class RayGizmo extends Gizmo {
         if ( snap == null ) {
             return null;
         }
-        if ( !snap.bounces.isEmpty() ) {
-            RayBounce primary = snap.bounces.get(0);
-            applyTransform(primary.ray.getOrigin(), primary.ray.getDirection());
+        if ( !snap.rays().isEmpty() ) {
+            Ray primary = snap.rays().get(0);
+            applyTransform(primary.getOrigin(), primary.getDirection());
         }
         currentRotationAngleInRadians = snap.rotationAngleInRadians;
         currentSnapshot = snap;
@@ -202,6 +227,159 @@ public class RayGizmo extends Gizmo {
 
     public SimpleBody getBody() {
         return body;
+    }
+
+    public Arrow getArrow() {
+        return arrow;
+    }
+
+    /**
+     * Builds a {@link SimpleScene} from the current snapshot, with all bodies
+     * (ray arrows, normal arrows, dot spheres) fully configured — materials,
+     * positions, rotations, and scales included.  The scene is ready to be
+     * consumed by any renderer without additional logical work.
+     *
+     * <p>Body types present in the returned scene:
+     * <ul>
+     *   <li>{@link Arrow} bodies: ray arrows (source + reflections) and surface-normal arrows (thinner).</li>
+     *   <li>{@link Sphere} bodies: three dot-spheres beyond a ray arrow that misses geometry.</li>
+     * </ul>
+     *
+     * @return a new scene; empty only if the gizmo has no snapshot yet
+     */
+    public SimpleScene buildScene() {
+        SimpleScene scene = new SimpleScene();
+        double arrowTotalLength = ARROW_BASE_LENGTH + ARROW_HEAD_LENGTH;
+
+        if ( currentSnapshot == null || currentSnapshot.rays().isEmpty() ) {
+            scene.addBody(buildRayBody(
+                new Ray(currentPosition, currentDirection), null,
+                sourceRayColor, arrowTotalLength));
+            return scene;
+        }
+
+        List<ColorRgb> normalColors = normalRayColors;
+
+        // Source ray (index 0)
+        Ray sourceRay = currentSnapshot.rays().get(0);
+        Intersection sourceIntersection = currentSnapshot.intersections().get(0);
+        scene.addBody(buildRayBody(sourceRay, sourceIntersection, sourceRayColor, arrowTotalLength));
+
+        if ( sourceIntersection == null ) {
+            addDotBodies(scene, sourceRay, arrowTotalLength);
+        } else {
+            addNormalBody(scene, sourceIntersection, normalColors.get(0 % normalColors.size()));
+        }
+
+        // Reflection bounces (index 1+)
+        for ( int i = 1; i < currentSnapshot.rays().size(); i++ ) {
+            Ray reflRay = currentSnapshot.rays().get(i);
+            Intersection reflIntersection = currentSnapshot.intersections().get(i);
+            ColorRgb reflColor = reflectedRayColors.get((i - 1) % reflectedRayColors.size());
+            scene.addBody(buildRayBody(reflRay, reflIntersection, reflColor, arrowTotalLength));
+
+            if ( reflIntersection == null ) {
+                addDotBodies(scene, reflRay, arrowTotalLength);
+            } else {
+                addNormalBody(scene, reflIntersection, normalColors.get(i % normalColors.size()));
+            }
+        }
+
+        return scene;
+    }
+
+    private SimpleBody buildRayBody(
+        Ray ray, Intersection intersection, ColorRgb color, double arrowTotalLength)
+    {
+        double scaleZ = 1.0;
+        if ( intersection != null ) {
+            double hitT = intersection.getT();
+            if ( hitT > 1e-6 && arrowTotalLength > 1e-6 ) {
+                scaleZ = hitT / arrowTotalLength;
+            }
+        }
+        SimpleBody b = new SimpleBody();
+        b.setGeometry(arrow);
+        b.setPosition(ray.getOrigin());
+        b.setRotation(rotationFromZToDirection(ray.getDirection()));
+        b.setScale(new Vector3Dd(1.0, 1.0, scaleZ));
+        b.setMaterial(materialFromColor(color));
+        return b;
+    }
+
+    private void addNormalBody(SimpleScene scene, Intersection intersection, ColorRgb color) {
+        Vector3Dd hitPoint = intersection.getPoint();
+        Vector3Dd normal = intersection.getNormal();
+        if ( hitPoint == null || normal == null ) {
+            return;
+        }
+        SimpleBody b = new SimpleBody();
+        b.setGeometry(arrow);
+        b.setPosition(hitPoint);
+        b.setRotation(rotationFromZToDirection(normal));
+        b.setScale(new Vector3Dd(0.5, 0.5, 1.0));
+        b.setMaterial(materialFromColor(color));
+        scene.addBody(b);
+    }
+
+    private void addDotBodies(SimpleScene scene, Ray ray, double arrowTotalLength) {
+        double len = ray.getDirection().length();
+        if ( len < VSDK.EPSILON ) {
+            return;
+        }
+        Vector3Dd dir = ray.getDirection().multiply(1.0 / len);
+        Vector3Dd origin = ray.getOrigin();
+        SimpleMaterial dotMat = materialFromColor(new ColorRgb(1.0, 1.0, 0.0));
+        double[] factors = { 1.25, 1.50, 1.75 };
+        for ( double factor : factors ) {
+            Vector3Dd dotPos = origin.add(dir.multiply(arrowTotalLength * factor));
+            SimpleBody b = new SimpleBody();
+            b.setGeometry(dotSphere);
+            b.setPosition(dotPos);
+            b.setMaterial(dotMat);
+            scene.addBody(b);
+        }
+    }
+
+    private static SimpleMaterial materialFromColor(ColorRgb color) {
+        SimpleMaterial m = new SimpleMaterial();
+        m = m.withAmbient(new ColorRgb(color.r() * 0.1, color.g() * 0.1, color.b() * 0.1));
+        m = m.withDiffuse(color);
+        m = m.withSpecular(new ColorRgb(1.0, 1.0, 1.0));
+        m = m.withPhongExponent(32.0);
+        return m;
+    }
+
+    public ColorRgb getSourceRayColor() {
+        return sourceRayColor;
+    }
+
+    public void setSourceRayColor(ColorRgb sourceRayColor) {
+        this.sourceRayColor = sourceRayColor;
+    }
+
+    public List<ColorRgb> getNormalRayColors() {
+        return normalRayColors;
+    }
+
+    public void setNormalRayColors(List<ColorRgb> normalRayColors) {
+        this.normalRayColors = new ArrayList<>(normalRayColors);
+    }
+
+    public List<ColorRgb> getReflectedRayColors() {
+        return reflectedRayColors;
+    }
+
+    public void setReflectedRayColors(List<ColorRgb> reflectedRayColors) {
+        this.reflectedRayColors = new ArrayList<>(reflectedRayColors);
+    }
+
+    public List<ColorRgb> getRefractedRayColors() {
+        return refractedRayColors;
+    }
+
+    public void setRefractedRayColors(List<ColorRgb> refractedRayColors) {
+        this.refractedRayColors = new ArrayList<>(refractedRayColors);
     }
 
     private void recordDataArrival() {
